--- a/README
+++ b/README
@@ -1,6 +1,9 @@
+Based on:
+    http://vimcasts.org/episodes/synchronizing-plugins-with-git-submodules-and-pathogen/
+
 Installation:
 
-    git clone git://github.com/nelstrom/dotvim.git ~/.vim
+    git clone git://github.com/verdor/dotvim.git ~/.vim
 
 Create symlinks:
 
