--- a/README
+++ b/README
@@ -15,3 +15,30 @@ Switch to the `~/.vim` directory, and fetch submodules:
     cd ~/.vim
     git submodule init
     git submodule update
+
+Install plugins as submodules with pathogen installed:
+
+    cd ~/.vim
+    mkdir ~/.vim/bundle
+    git submodule add http://github.com/tpope/vim-fugitive.git bundle/fugitive
+    git add .
+    git commit -m "Install Fugitive.vim bundle as a submodule."
+
+Installing your Vim environment on another machine:
+
+    cd ~
+    git clone http://github.com/username/dotvim.git ~/.vim
+    ln -s ~/.vim/vimrc ~/.vimrc
+    ln -s ~/.vim/gvimrc ~/.gvimrc
+    cd ~/.vim
+    git submodule init
+    git submodule update
+
+Upgrading a plugin bundle:
+
+    cd ~/.vim/bundle/fugitive
+    git pull origin master
+
+Upgrading all bundled plugins
+
+    git submodule foreach git pull origin master
