--- a/README
+++ b/README
@@ -42,3 +42,12 @@ Upgrading a plugin bundle:
 Upgrading all bundled plugins
 
     git submodule foreach git pull origin master
+
+Install plugin vim-rails:
+
+    git submodule add  https://github.com/tpope/vim-rails.git bundle/vim-rails
+    git add .
+    git commit -m "Install plugin vim-rails"
+
+View the manual:
+    :help rails    
